completed some comments, only images in dictionaries missing

--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_PermissionListWidgetPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_PermissionListWidgetPage.cshtml
@@ -14,12 +14,12 @@
         <div class="name">
             @PermissionLocalizer.TranslatePermissionName(permission.Name)
         </div>
-        <div class="status visible-xs">
+        <div class="status visible-xs permission-loader-wrapped">
             <span class="success">@Localizer.Translate("Changed", "Permission")</span>
         </div>
         <div class="alert alert-danger"></div>
     </td>
-    <td class="status hidden-xs">
+    <td class="status hidden-xs permission-loader">
         <span class="success">@Localizer.Translate("Changed", "Permission")</span>
     </td>
 </tr>
