--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
@@ -244,11 +244,11 @@ a.dictionary-result-headword-book {
     width: 100%;
 }
 
-.loading-bottom {
+.loading-headword-list {
     top: 60%;
 }
 
-.loading-top {
+.loading-headword-description {
     top: 10%;
 }
 
