--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Home.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Home.less
@@ -70,7 +70,7 @@
     margin-top: -30px;
 }
 
-.no-messages {
+.home-no-news {
     font-size: 18px;
     text-align: center;
     padding-top: 5vh;
