--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectListItem.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectListItem.cshtml
@@ -16,7 +16,11 @@
             </a>
         </div>
         <div class="col-md-4">
-            @Localizer.Translate("LastEdited", "Admin"): @viewModel.LastEditDate @Localizer.Translate("ByUser", "Admin") @viewModel.LastEditUser<br />
+            @{
+                var lastEditDate = viewModel.LastEditDate?.ToString() ?? "-";
+                var lastEditUser = viewModel.LastEditUser ?? "-";
+            }
+            @Localizer.Translate("LastEdited", "Admin"): @lastEditDate @Localizer.Translate("ByUser", "Admin") @lastEditUser<br/>
             @Localizer.Translate("Created", "Admin"): @viewModel.CreateDate @Localizer.Translate("ByUser", "Admin") @viewModel.CreateUser
         </div>
         <div class="col-md-2 project-item-buttons">
