Select My projects as default, propagate filter to URL

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/List.cshtml
@@ -33,11 +33,7 @@
                     <div class="col-xs-12 col-sm-10">
                         <form asp-action="List" asp-controller="Project" method="get" class="project-search-form search-form form-inline">
                             <div class="form-group">
-                                <select class="form-control" id="projectOwnerFilter" title="@Localizer.Translate("Filter", "Admin")">
-                                    @foreach (var option in Model.FilterTypes)
-                                    {
-                                        <option value="@option">@Localizer.Translate(option.ToString(), "Admin")</option>
-                                    }
+                                <select asp-items="Model.FilterTypes" class="form-control" id="projectOwnerFilter" title="@Localizer.Translate("Filter", "Admin")">
                                 </select>
                                 <div class="search-input" title="@Localizer.Translate("FindByName", "Admin")">
                                     <input class="form-control search-value" name="search" placeholder="@Localizer.Translate("ProjectName", "Admin")" value="@Model.Projects.SearchQuery"/>
