--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -1,16 +1,9 @@
 ﻿@using ITJakub.Web.Hub.Core
 @using Scalesoft.Localization.AspNetCore
+@model IList<Vokabular.MainService.DataContracts.Contracts.DetailPageContract>
 @inject ILocalizationService Localization
 
 <div id="project-resource-images" class="hide">
-    <div class="text-editor-page-slider">
-        <div class="ui-slider-handle page-slider-handle">
-            <div class="slider-tooltip">
-                <div class="slider-tooltip-text"></div>
-            </div>
-        </div>
-    </div>
-
     <div class="row page-menu-row">
         <div class="col-xs-2">
             <div class="input-group go-to-page-field-group">
@@ -33,17 +26,46 @@
             </div>
         </div>
         <div class="col-xs-2"></div>
-        <div class="col-xs-2">
+        <div class="col-xs-2 text-right">
             <button class="btn btn-default upload-new-image-button">
                 @Localization.Translate("UploadNewVersion", "RidicsProject")
             </button>
         </div>
     </div>
-    <div class="content-images">
-        <div class="container-fluid image-container">
-            <div class="row image-row">
-                <div class="col-xs-12 text-center page-image">
+    
+    <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+        <div class="panel panel-default pages">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="panel-title">
+                            @Localization.Translate("Pages", "RidicsProject")
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="panel-body">
+                <div class="list-container selectable page-listing">
+                    @await Html.PartialAsync("Work/SubView/_PageWithImagesTable", Model, ViewData)
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="content-images col-xs-12 col-sm-7 col-md-8 col-lg-9">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    <div class="row">
+                        <div class="col-xs-10">
+                            @Localization.Translate("PageContent", "RidicsProject")
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-body page-image">
+                <div class="alert-holder"></div>
+                <div class="body-content"></div>
             </div>
         </div>
     </div>
