--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -33,7 +33,7 @@
         </div>
     </div>
     
-    <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+    <div class="pages col-xs-12 col-sm-5 col-md-4 col-lg-3">
         <div class="panel panel-default pages">
             <div class="panel-heading">
                 <div class="row">
@@ -57,7 +57,7 @@
             <div class="panel-heading">
                 <div class="panel-title">
                     <div class="row">
-                        <div class="col-xs-10">
+                        <div class="col-xs-12">
                             @Localization.Translate("PageContent", "RidicsProject")
                         </div>
                     </div>
