--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -3,9 +3,9 @@
 @model IList<Vokabular.MainService.DataContracts.Contracts.DetailPageContract>
 @inject ILocalizationService Localization
 
-<div id="project-resource-images" class="hide">
+<div id="project-resource-images">
     <div class="row page-menu-row">
-        <div class="col-xs-2">
+        <div class="col-xs-12 col-sm-4 col-md-3">
             <div class="input-group go-to-page-field-group">
                 <input type="text" class="form-control go-to-page-field" placeholder="@Localization.Translate("GoToPage", "RidicsProject")" aria-label="@Localization.Translate("GoToPage", "RidicsProject")">
                 <span class="input-group-btn">
@@ -15,8 +15,8 @@
                 </span>
             </div>
         </div>
-        <div class="col-xs-2"></div>
-        <div class="col-xs-4 page-navigator">
+        <div class="col-xs-0 col-md-1"></div>
+        <div class="col-xs-12 col-sm-4 col-md-4 page-navigator">
             <div class="col-xs-4 previous-page page-navigation-arrow text-center">
                 <i class="fa fa-chevron-left" aria-hidden="true"></i>
             </div>
@@ -25,8 +25,8 @@
                 <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </div>
         </div>
-        <div class="col-xs-2"></div>
-        <div class="col-xs-2 text-right">
+        <div class="col-xs-0 col-md-1"></div>
+        <div class="col-xs-12 col-sm-4 col-md-3 text-right">
             <button class="btn btn-default upload-new-image-button">
                 @Localization.Translate("UploadNewVersion", "RidicsProject")
             </button>
@@ -37,10 +37,13 @@
         <div class="panel panel-default pages">
             <div class="panel-heading">
                 <div class="row">
-                    <div class="col-xs-12 col-md-4">
+                    <div class="col-xs-4">
                         <div class="panel-title">
                             @Localization.Translate("Pages", "RidicsProject")
                         </div>
+                    </div>
+                    <div class="col-xs-8 panel-buttons text-right">
+                        <button type="button" class="btn btn-default add-page-button">@Localization.Translate("AddPage", "Admin")</button>
                     </div>
                 </div>
             </div>
@@ -136,4 +139,6 @@
             </div>
         </div>
     </div>
+    
+    @await Html.PartialAsync("Work/SubView/_AddPageDialog")
 </div>
