--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PageWithImagesTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PageWithImagesTable.cshtml
@@ -14,7 +14,7 @@
                 for (var i = 0; i < Model.Count; i++)
                 {
                     var pageItem = Model[i];
-                    <tr class="page-row" data-page-id="@pageItem.Id" data-position="@pageItem.Position" data-index="@i">
+                    <tr class="page-row" data-page-id="@pageItem.Id" data-name="@pageItem.Name" data-position="@pageItem.Position" data-version-id="@pageItem.VersionId" data-index="@i">
                         <td>
                             <span class="name">
                                @Localizer.Translate("Page", "RidicsProject"): @pageItem.Name
