--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
@@ -166,34 +166,7 @@
     </div>
 </div>
 
-<div class="modal fade" role="dialog" id="addPageDialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">@Localizer.Translate("AddPage", "Admin")</h4>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-12 form-horizontal">
-                        <div class="form-group">
-                            <div class="col-xs-3">
-                                <label class="control-label">@Localizer.Translate("PageName", "Admin")</label>
-                            </div>
-                            <div class="col-xs-9">
-                                <input type="text" class="form-control" name="page-name"/>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default cancel" data-dismiss="modal">@Localizer.Translate("Cancel", "Admin")</button>
-                <button id="addPage" type="button" class="btn btn-default">@Localizer.Translate("Add", "Admin")</button>
-            </div>
-        </div>
-    </div>
-</div>
+@await Html.PartialAsync("Work/SubView/_AddPageDialog")
 
 <div class="modal fade info-modal-dialog" role="dialog">
     <div class="modal-dialog">
