Image editor - view improvements

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1296,6 +1296,7 @@ table {
         .page-navigation-arrow {
             cursor: pointer;
             color: @page-arrows-color;
+            margin: 0 1em;
         }
 
         .page-indicator {
