--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -5,7 +5,7 @@
 
 <div id="project-resource-images">
     <div class="row page-menu-row">
-        <div class="col-xs-12 col-sm-4 col-md-3">
+        <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
             <div class="input-group go-to-page-field-group">
                 <input type="text" class="form-control go-to-page-field" placeholder="@Localization.Translate("GoToPage", "RidicsProject")" aria-label="@Localization.Translate("GoToPage", "RidicsProject")">
                 <span class="input-group-btn">
@@ -15,21 +15,14 @@
                 </span>
             </div>
         </div>
-        <div class="col-xs-0 col-md-1"></div>
-        <div class="col-xs-12 col-sm-4 col-md-4 page-navigator">
-            <div class="col-xs-4 previous-page page-navigation-arrow text-center">
+        <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9 page-navigator text-center">
+            <span class="previous-page page-navigation-arrow text-center">
                 <i class="fa fa-chevron-left" aria-hidden="true"></i>
-            </div>
-            <div class="col-xs-4 page-indicator text-center"></div>
-            <div class="col-xs-4 next-page page-navigation-arrow text-center">
+            </span>
+            <span class="page-indicator text-center"></span>
+            <span class="next-page page-navigation-arrow text-center">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i>
-            </div>
-        </div>
-        <div class="col-xs-0 col-md-1"></div>
-        <div class="col-xs-12 col-sm-4 col-md-3 text-right">
-            <button class="btn btn-default upload-new-image-button">
-                @Localization.Translate("UploadNewVersion", "RidicsProject")
-            </button>
+            </span>
         </div>
     </div>
     
@@ -60,8 +53,15 @@
             <div class="panel-heading">
                 <div class="panel-title">
                     <div class="row">
-                        <div class="col-xs-12">
-                            @Localization.Translate("PageContent", "RidicsProject")
+                        <div class="col-xs-12 col-sm-6">
+                            <div class="panel-title text-left">
+                                @Localization.Translate("PageContent", "RidicsProject")
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 panel-buttons text-right">
+                            <button type="button" class="btn btn-default upload-new-image-button">
+                                @Localization.Translate("UploadNewVersion", "RidicsProject")
+                            </button>
                         </div>
                     </div>
                 </div>
