Add UserCode to UserDetailContract, add UserCode to EditUser and EditUserRoles views

--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUserRoles.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUserRoles.cshtml
@@ -43,6 +43,10 @@
                         <span class="detail-item-title">@Localizer.Translate("Email", "Permission", LocTranslationSource.File): </span>
                         <span id="specificUserEmail">@Model.Email</span>
                     </div>
+                    <div class="detail-item">
+                        <span class="detail-item-title">@Localizer.Translate("UserCode", "Permission", LocTranslationSource.File): </span>
+                        <span id="specificUserCode">@Model.UserCode</span>
+                    </div>
                 </div>
                 <div>
                     <button id="addGroupButton" class="btn btn-default permission-button">@Localizer.Translate("AssignToGroup", "Permission")</button>
