--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUser.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUser.cshtml
@@ -49,6 +49,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            @Html.LabelFor(m => m.UserCode, new { @class = "col-md-3 control-label" })
+                            <div class="col-md-8">
+                                @Html.TextBoxFor(m => m.UserCode, new { @class = "form-control", @readonly = true })
+                            </div>
+                        </div>
+                        <div class="form-group">
                             @Html.LabelFor(m => m.FirstName, new { @class = "col-md-3 control-label" })
                             <div class="col-md-8">
                                 @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
