--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Cooperation.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Cooperation.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Scalesoft.Localization.AspNetCore
+@using Scalesoft.Localization.Core.Util
+@using Vokabular.MainService.DataContracts.Contracts.Permission
 @inject ILocalizationService Localizer
 @model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.Permission.UserGroupContract>
 
@@ -10,14 +12,17 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="panel-title col col-xs-12 col-sm-1">
-                            @Localizer.Translate("Group", "Permission")
+                        <div class="panel-title col-sm-12 col-md-3 col-lg-4 text-left">
+                            @Localizer.Translate("GroupsAndUsers", "Permission")
                         </div>
-                        <div class="col col-xs-12 col col-sm-11">
+                        <div class="col-xs-12 col col-sm-12 col-md-9 col-lg-8">
                             <form asp-action="CooperationList" asp-controller="Project" method="get" class="role-search-form search-form form-inline">
                                 <div class="form-group">
-                                    <div id="addPermissionButton" class="btn btn-default">
+                                    <div id="addPermissionButton" class="btn btn-default" title="@Localizer.Translate("AddProjectPermissionToGroup", "Permission")">
                                         <i class="fa fa-plus"></i>
+                                    </div>
+                                    <div id="addPermissionToUserButton" class="btn btn-default" title="@Localizer.Translate("AddProjectPermissionToUser", "Permission")">
+                                        <i class="fa fa-user-plus"></i>
                                     </div>
                                     <div class="search-input">
                                         <input class="form-control search-value" name="search" placeholder=" " value="@Model.SearchQuery" />
@@ -47,4 +52,39 @@
     </div>
     
     @await Html.PartialAsync("Widgets/_AddProjectPermissionsDialog")
+    
+    
+    <div id="addProjectPermissionToUserDialog" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">@Localizer.Translate("AddProjectPermissionToUser", "Permission")</h4>
+                    <h5 class="modal-title specific-project-name"></h5>
+                </div>
+                <div class="modal-body">
+                    <div id="addPermissionHelpAlert" class="alert alert-info">
+                        @Localizer.Translate("AddPermissionOnProjectHelp", "Permission")
+                    </div>
+                    <div class="form-group">
+                        <label for="userCodeInput">@Localizer.Translate("UserCode", "Permission")</label>
+                        <input type="text" class="form-control user-search-input" id="userCodeInput" />
+                    </div>
+
+                    <fieldset class="form-group">
+                        <label>@Localizer.Translate("Permissions", "Permission")</label>
+                        <div>
+                            @await Html.PartialAsync("Widgets/_ProjectPermissionsWidget", new PermissionDataContract())
+                        </div>
+                    </fieldset>
+
+                    <div id="addProjectToUserError"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "Permission", LocTranslationSource.File)</button>
+                    <button type="button" class="btn btn-default" id="addPermissionToUser" data-init="false">@Localizer.Translate("AddPermissionToUser", "Permission", LocTranslationSource.File)</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
