Display current page number in corpus search

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/ridics.bohemiantextbank-search-viewer-combined.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/ridics.bohemiantextbank-search-viewer-combined.less
@@ -154,6 +154,10 @@
             .corpus-search-setting-div-results-count {
                 margin-top: 10px;
                 margin-bottom: 15px;
+                
+                > div {
+                    margin-bottom: 5px;
+                }
             }
 
             .corpus-search-setting-div-pagination {
