loading bars on key-table-editors

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
@@ -192,6 +192,6 @@
         </div>
     </div>
  <div class="row pagination-row-elements">
-  <div class="col-xs-12 text-center key-table-pagination"></div>
+  <div class="col-xs-12 text-center" id="key-table-pagination"></div>
  </div>
 </div>
