Image editor - improve naming of methods

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -1,6 +1,6 @@
 ﻿@using ITJakub.Web.Hub.Core
 @using Scalesoft.Localization.AspNetCore
-@model IList<Vokabular.MainService.DataContracts.Contracts.DetailPageContract>
+@model IList<Vokabular.MainService.DataContracts.Contracts.PageWithImageInfoContract>
 @inject ILocalizationService Localization
 
 <div id="project-resource-images">
