--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PageWithImagesTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PageWithImagesTable.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Scalesoft.Localization.AspNetCore
-@model IList<Vokabular.MainService.DataContracts.Contracts.DetailPageContract>
+@model IList<Vokabular.MainService.DataContracts.Contracts.PageWithImageInfoContract>
 @inject ILocalizationService Localizer
 
 <div class="table-responsive">
