Homepage searchbar - redirect to bibliographies/editions search

--- a/UJCSystem/ITJakub.Web.Hub/Views/Home/Index.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Home/Index.cshtml
@@ -45,14 +45,11 @@
         </div>
     }
 
-    <form role="form" class="form-horizontal">
+    <form id="homeSearch" role="form" class="form-horizontal">
         <div class="form-group searchbar">
             <div class="searchbar-buttons">
-                <button type="button" class="btn btn-default searchbar-button">
+                <button type="button" class="btn btn-default searchbar-button search">
                     @Localizer.Translate("Search", "Home", LocTranslationSource.File)
-                </button>
-                <button type="button" class="btn btn-default searchbar-button">
-                    @Localizer.Translate("Specify", "Home", LocTranslationSource.File)
                 </button>
             </div>
             <div class="searchbar-inputs">
