--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
@@ -33,7 +33,8 @@
 </head>
 <body class="eupopup eupopup-fixedtop eupopup-color-inverse" data-has-book-text-url="@Url.Action("HasBookText", "Reader",  new {area = ""})">
 
-    <div class="component keyboard-component" data-keyboard-id="0" data-keyboard-api-url="@Url.Action("GetLayoutList", "Keyboard",  new {area = ""})"></div>
+    <div class="portal-type hide" data-portal-type="@PortalConfig.Value.PortalType"></div>
+<div class="component keyboard-component" data-keyboard-id="0" data-keyboard-api-url="@Url.Action("GetLayoutList", "Keyboard",  new {area = ""})"></div>
 
     @*top fixed part*@
     <div class="navbar navbar-inverse navbar-fixed-top header-content">
