--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Home.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Home.less
@@ -113,3 +113,10 @@
     display: inline-block;
     background:transparent @rss-feed-icon-path center top no-repeat;
 }
+
+#homeSearch {
+   .searchbar-inputs {
+        margin-right: 75px;
+    }
+}
+
