Hide audio in top menu and in project editor

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Publications.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Publications.cshtml
@@ -30,7 +30,7 @@
                     <th>@Localizer.Translate("Date", "Admin")</th>
                     <th>@Localizer.Translate("TextSources", "Admin")</th>
                     <th>@Localizer.Translate("ImageSources", "Admin")</th>
-                    <th>@Localizer.Translate("AudioSources", "Admin")</th>
+                    @*<th>@Localizer.Translate("AudioSources", "Admin")</th>*@
                     <th>@Localizer.Translate("Author", "Admin")</th>
                     <th>@Localizer.Translate("Comment", "Admin")</th>
                     <th></th>
