--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/Menu/_PortalMenuCommunity.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/Menu/_PortalMenuCommunity.cshtml
@@ -125,7 +125,7 @@
                 </li>
             </ul>
         </li>
-        <li id="audio-menu" class="has-sub">
+        @*<li id="audio-menu" class="has-sub">
             <a href='@Url.Action("List", "AudioBooks", new {area = "AudioBooks"})'>
                 <span>@Localizer.Translate("AudioBooks", "layout", LocTranslationSource.File)</span>
             </a>
@@ -146,7 +146,7 @@
                     </a>
                 </li>
             </ul>
-        </li>
+        </li>*@
         <li>
             <a href='@ForumOption.Value.Url'>
                 <span>@Localizer.Translate("Forum", "layout", LocTranslationSource.File)</span>
