--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PublicationListPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PublicationListPage.cshtml
@@ -17,7 +17,7 @@ else
             <td>@snapshotViewModel.PublishDate.ToLocalTime().ToString(Localizer.GetRequestCulture())</td>
             <td>@snapshotViewModel.PublishedTextResourceCount</td>
             <td>@snapshotViewModel.PublishedImageResourceCount</td>
-            <td>@snapshotViewModel.PublishedAudioResourceCount</td>
+            @*<td>@snapshotViewModel.PublishedAudioResourceCount</td>*@
             <td>@snapshotViewModel.Author</td>
             <td>@snapshotViewModel.Comment</td>
             <td class="duplicate-column"><a asp-controller="Publication" asp-action="DuplicateSnapshot" asp-route-snapshotId="@snapshotViewModel.Id">@Localizer.Translate("Duplicate", "Admin")</a></td>
