Add terms editor

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1236,7 +1236,9 @@ table {
     }
 }
 
-#project-resource-images, #project-resource-preview {
+#project-resource-images, 
+#project-resource-preview,
+#project-resource-terms {
     .text-editor-page-slider {
         background-color: @editor-sliderbar-color;
         border: none !important; /*to override default browser border styling*/
