Show text type in project editor

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -160,6 +160,11 @@
     font-size: 120%;
     width: 200px;
     margin-bottom: 20px;
+
+    .text-type {
+        color: gray;
+        font-size: 80%;
+    }
 }
 
 .resource-panel {
