--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Terms.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Terms.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Scalesoft.Localization.AspNetCore
-@model IList<Vokabular.MainService.DataContracts.Contracts.PageContract>
+@model ITJakub.Web.Hub.Areas.Admin.Models.TermEditorViewModel
 @inject ILocalizationService Localization
 
 <div id="project-resource-terms">
@@ -18,7 +18,7 @@
             </div>
             <div class="panel-body">
                 <div class="list-container selectable page-listing">
-                    @await Html.PartialAsync("Resource/SubView/_PageTable", Model, ViewData)
+                    @await Html.PartialAsync("Resource/SubView/_PageTable", Model.Pages, ViewData)
                 </div>
             </div>
         </div>
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-6 panel-buttons text-right">
-                            <button type="button" class="btn btn-default add-page-button">@Localization.Translate("AddPage", "Admin")</button>
+                            <button type="button" class="btn btn-default manage-terms-button">@Localization.Translate("AddTerms", "Admin")</button>
                         </div>
                     </div>
                 </div>
@@ -52,10 +52,14 @@
             <div class="panel-heading">
                 <div class="panel-title">
                     <div class="row">
-                        <div class="col-xs-12">
+                        <div class="col-xs-10">
                             <div class="panel-title text-left">
                                 @Localization.Translate("PageContent", "RidicsProject")
                             </div>
+                        </div>
+                        <div class="col-xs-2 text-right">
+                            <i class="hide fa fa-file-text-o" title="@Localization.Translate("PageContainsText", "RidicsProject")"></i>
+                            <i class="hide fa fa-image" title="@Localization.Translate("PageContainsImage", "RidicsProject")"></i>
                         </div>
                     </div>
                 </div>
@@ -63,6 +67,51 @@
             <div class="panel-body page-text">
                 <div class="alert-holder"></div>
                 <div class="body-content"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" role="dialog" id="addTermsDialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title info-dialog-title"></h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="term-options col-xs-6 col-sm-7 col-md-8">
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <select id="termCategoryFilter" class="form-control">
+                                        <option value="" selected="selected">@Localization.Translate("AllCategories", "Admin")</option>
+                                        @foreach (var category in Model.TermCategories)
+                                        {
+                                            <option value="@category.Id">@category.Name</option>
+                                        }
+                                    </select>
+                                </div>
+                                <div class="col-xs-6">
+                                    <input id="searchTerm" type="text" class="form-control"/>
+                                    <i class="fa fa-close reset-search-button"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="termsList" class="col-xs-6 col-sm-7 col-md-8">
+                            @await Html.PartialAsync("Resource/SubView/_TermCategories", Model.TermCategories, ViewData)
+                        </div>
+                        <div id="selectedTerms" class="col-xs-6 col-sm-5 col-md-4">
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                        @Localization.Translate("Close", "Admin")
+                    </button>
+                </div>
             </div>
         </div>
     </div>
