Term editor - saving

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Terms.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Terms.cshtml
@@ -106,10 +106,16 @@
                             
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="alert-holder col-xs-12"></div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">
                         @Localization.Translate("Close", "Admin")
+                    </button>
+                    <button type="button" class="btn btn-default save-terms">
+                        @Localization.Translate("Save", "Admin")
                     </button>
                 </div>
             </div>
