update color scaling for better visibility; changed positioning in loading headword list

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
@@ -244,12 +244,9 @@ a.dictionary-result-headword-book {
     width: 100%;
 }
 
-.loading-headword-list {
-    top: 60%;
-}
-
-.loading-headword-description {
-    top: 5%;
+.loading-headword {
+    position: sticky;
+    top: 300px;
 }
 
 .dictionary-list-empty {
