GUI layout for project groups view

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -592,6 +592,11 @@ table {
     #work-categorization-invalid-keyword-fail {
         display: none;
     }
+
+    .page-listing {
+        height: auto;
+        min-height: 200px;
+    }
 }
 
 #project-work-categorization,
