--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Categorization.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Categorization.cshtml
@@ -158,16 +158,70 @@
                             <div class="form-group" id="project-group-projects">
                                 <div class="col-md-12">
                                     <div>
-                                        <button class="btn btn-default" id="add-project-to-group-button">@Localizer.Translate("AddProject", "Admin")</button>
+                                        <button class="btn btn-default" id="add-project-to-group-button">@Localizer.Translate("AddProjectToGroup", "Admin")</button>
+                                        <button class="btn btn-default" id="remove-project-from-group-button">@Localizer.Translate("RemoveProjectFromGroup", "Admin")</button>
+                                    </div>
+                                    <div style="margin-top: 3rem;">
+                                        <h4>@Localizer.Translate("ProjectsInGroup", "Admin")</h4>
                                     </div>
                                     <div id="project-group-projects-list">
-                                        TODO nějaký list v partial view
+                                        <div class="list-container selectable page-listing">
+                                            <div class="table-responsive">
+                                                <table class="table table-hover">
+                                                    <tbody>
+                                                        @*@for (var i = 0; i < Model.Count; i++)
+                                                        {
+                                                            var pageItem = Model[i];*@
+                                                            <tr class="page-row">
+                                                                <td>
+                                                                    <a href="#">ProjectName</a>
+                                                                </td>
+                                                            </tr>
+                                                            <tr class="page-row">
+                                                                <td>
+                                                                    <a href="#">ProjectName</a>
+                                                                </td>
+                                                            </tr>
+                                                        @*}*@
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div id="project-group-projects-pagination"></div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" role="dialog" id="add-project-to-group-dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">@Localizer.Translate("AddProjectToGroup", "Admin")</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        @Localizer.Translate("SelectProjectForCreatingGroup", "Admin")
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        TODO list here
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="dialog-error alert alert-danger true-inline-alert">@Localizer.Translate("SaveError", "Admin")</div>
+                <button type="button" class="btn btn-default cancel-add-project-to-group" data-dismiss="modal">@Localizer.Translate("Cancel", "Admin")</button>
+                <button type="button" class="btn btn-default submit-add-project-to-group">@Localizer.Translate("Add", "Admin")</button>
             </div>
         </div>
     </div>
