--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.BootstrapStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.BootstrapStyle.less
@@ -27,7 +27,8 @@ body {
     background-color: @button-background-color;
 }
 
-.btn-default {
+.btn-default,
+.bootbox .btn-primary {
     border-color: initial;
     border: none;
     font-weight: bold;
